# cuda-llm-storage-pipeline

./: BUILD_NOTES.md  CMakeLists.txt  INTEGRATION_TEST_RESULTS.md  QUICKSTART.md  README.md  RUN_DEMO.md
Others/: notes.txt  project-description.txt
apps/: slp_bench_storage.cpp  slp_get_model.cpp  slp_llama_batch.cpp  slp_llama_client.cpp  slp_put_model.cpp  slp_put_prompts.cpp  slp_run_infer.cpp
include/slp/: http_client.h  sha256.h
include/slp/artifact/: manifest.h
include/slp/seaweed/: filer.h
scripts/: bench_storage.sh  demo_workflow.sh  seaweed_local_up.sh
src/: http_client.cpp
src/artifact/: manifest.cpp  paths.cpp  registry.cpp
src/pipeline/: model_store.cpp  prompt_store.cpp  result_store.cpp  run_id.cpp
src/seaweed/: assign.cpp  file_download.cpp  file_upload.cpp  filer.cpp  lookup.cpp
